--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,6 @@
 
 
+
 img{
 	height:150px;
 	width:100px;
@@ -11,16 +12,16 @@ img{
 	}
 	
 body{
-	background-color:#97D2EC;
+	background-color:#FFF7E9;
 	margin:0;
 	}
 	
 h1{
-	color:#FEF5AC;
+	color:#1746A2;
 	margin:0;
 	}
 h3{
-	color:#FEF5AC;
+	color:#1746A2;
 	}
 hr {
 	
@@ -31,7 +32,7 @@ hr {
 	
 	}
 div {
-	background-color:#25316D;
+	background-color:#FF731D;
 	
 	}
 	
